carrito de práctica

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <button id="boton-carrito"><span id="contador-carrito">0</span></button>
+    </header>
     
     <main id="contenedor-productos">
 
     </main>
+
+    <div>
+        <div>
+            <h2>Carrito</h2>
+            <div id="carrito-contenedor">
+
+            </div>
+            <p>Precio total: <span id="precio-total">0</span></p>
+            <button id="vaciar-carrito">Vaciar carrito</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
